--- a/hallucinations/package.json
+++ b/hallucinations/package.json
@@ -18,7 +18,9 @@
     "openai": "^4.24.7",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-konva": "^18.2.10",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
